--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -375,7 +375,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 /* layout_your_inbox */
 .inbox_wrap { position: relative; display: flex; justify-content: center; align-items: center; padding: 90px 0; text-align: center; color: #fff; background-color: #503AE7; z-index: 1; transform: translateY(30%); }
 
-.inbox_wrap::after { content: ''; display: block; width: 100%; height: 100%; background: url(../../assets/images/contents/bg_vector.png) no-repeat bottom; position: absolute; left: 0; top: 0; opacity: 0.1; z-index: -1; }
+.inbox_wrap::after { content: ''; display: block; width: 100%; height: 100%; background: url(../../assets/images/temp/bg_vector.png) no-repeat bottom; position: absolute; left: 0; top: 0; opacity: 0.1; z-index: -1; }
 
 .inbox_wrap .email_send { margin: 32px auto 0 auto; }
 
@@ -444,10 +444,10 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 .layout_banner_wrap > div > p:nth-child(2) { line-height: 28px; }
 
 /* page_host */
-.page_host .layout_banner_wrap { background: url(../../assets/images/contents/host_banner.png) no-repeat center; background-size: cover; }
+.page_host .layout_banner_wrap { background: url(../../assets/images/temp/host_banner.png) no-repeat center; background-size: cover; }
 
 /* page_podcast */
-.page_podcast .layout_banner_wrap { background: url(../../assets/images/contents/podcast_banner_2.png) no-repeat center; background-size: cover; }
+.page_podcast .layout_banner_wrap { background: url(../../assets/images/temp/podcast_banner_2.png) no-repeat center; background-size: cover; }
 
 /* page_blog */
 .page_blog .typ_sec_01 { padding: 64px 124px 62px 0; }
@@ -507,9 +507,9 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 
 .page_home .typ_01_img { width: 632px; height: 450px; background-color: #503AE7; }
 
-.page_home .typ_01_img::before { content: ''; display: block; height: 100%; width: 100%; background: url(../../assets/images/lines/bg_lines_3.png) no-repeat left 34px top 125px; }
+.page_home .typ_01_img::before { content: ''; display: block; height: 100%; width: 100%; background: url(../../assets/images/temp/bg_lines_3.png) no-repeat left 34px top 125px; }
 
-.page_home .typ_01_img::after { content: ''; display: block; background: url(../../assets/images/lines/bg_lines_2.png) no-repeat right center; height: 72px; width: 108px; position: absolute; right: 90px; bottom: 138px; z-index: 1; }
+.page_home .typ_01_img::after { content: ''; display: block; background: url(../../assets/images/temp/bg_lines_2.png) no-repeat right center; height: 72px; width: 108px; position: absolute; right: 90px; bottom: 138px; z-index: 1; }
 
 .page_home .typ_01_img .img_only { position: relative; left: 0; top: -78%; transform: translateY(-50%); overflow: hidden; width: 100%; max-width: 384px; height: 100%; max-height: 384px; border-radius: 384px; }
 
@@ -517,17 +517,17 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 
 .page_home .typ_01_img .img_only > div img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; margin: auto; }
 
-.sec_fir .typ_sec_03 { background-image: url(../../assets/images/lines/bg_lines_8.png); background-position: 44%; }
+.sec_fir .typ_sec_03 { background-image: url(../../assets/images/temp/bg_lines_8.png); background-position: 44%; }
 
 .sec_fir .typ_sec_03 .top_sub_01 { padding: 100px 116px 0 114px; }
 
-.sec_secon .typ_sec_03 { background-image: url(../../assets/images/lines/bg_lines_4.png); background-position: top 12% right 12%; }
+.sec_secon .typ_sec_03 { background-image: url(../../assets/images/temp/bg_lines_4.png); background-position: top 12% right 12%; }
 
 .sec_secon .typ_sec_03 .top_sub_01 { padding: 100px 173px 0 114px; }
 
 .sec_thir .top_img_wrap::after { content: ''; display: inline-block; position: absolute; left: -34px; bottom: -21px; width: 384px; height: 124px; background: #503AE7 url(../../assets/images/contents/sound_wave.png) no-repeat center; }
 
-.sec_thir .typ_sec_03 { background-image: url(../../assets/images/lines/bg_lines_6.png); background-position: bottom 30% right 5%; }
+.sec_thir .typ_sec_03 { background-image: url(../../assets/images/temp/bg_lines_6.png); background-position: bottom 30% right 5%; }
 
 .sec_thir .typ_sec_03 .top_sub_01 { padding: 90px 244px 0 0px; }
 
@@ -564,7 +564,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 
 .producer_post .pro_po_profile .pro_po_profile_wrap .pro_info img, .producer_post .pro_po_profile .pro_po_profile_wrap .pro_info span { display: block; }
 
-.producer_post .pro_po_profile .pro_po_profile_wrap .pro_info > img { width: 64px; height: 64px; border-radius: 50%; }
+.producer_post .pro_po_profile .pro_po_profile_wrap .pro_info > img { width: 64px; height: 64px; border-radius: 50%; object-fit: cover; }
 
 .producer_post .pro_po_profile .pro_po_profile_wrap .pro_info .name { font-weight: 700; font-size: 24px; line-height: 36px; margin-top: 16px; }
 
