--- a/dev/css_dev/layout/_header.scss
+++ b/dev/css_dev/layout/_header.scss
@@ -15,6 +15,8 @@ header {
   justify-content: space-between;
   z-index: 30;
   max-width: 1280px;
+  color: var(--fontColor);
+  background: var(--background);
   h1 {
     margin: 0;
     a {
