header 다크모드 수정

--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -653,7 +653,7 @@ ul.socials_list li .ico_linkedIn_p { background: url(../../assets/images/ico/ico
 /* ========================================================== */
 /* ---------------------------------------------------------- */
 /* header s ================================================= */
-header { position: relative; height: 72px; line-height: 72px; background-color: #fff; display: flex; justify-content: space-between; z-index: 30; max-width: 1280px; color: var(--fontColor); background: var(--background); }
+header { position: relative; height: 72px; line-height: 72px; display: flex; justify-content: space-between; z-index: 30; max-width: 1280px; color: var(--fontColor); background-color: #fff; background-color: var(--background); }
 
 header h1 { margin: 0; }
 
