--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -726,7 +726,7 @@ header .gnb .quick_top a.btn_top:after { content: ''; height: 0; width: 0; posit
 /* ---------------------------------------------------------- */
 @media only screen and (max-width: 768px) { header { overflow: inherit; }
   header .gnb .mo_hamburger { display: block; }
-  header .gnb .sub_menu { position: absolute; right: -100%; background-color: #fff; height: 100vh; width: 80%; font-size: 30px; text-align: right; padding: 70px 50px; transition: .5s; }
+  header .gnb .sub_menu { position: absolute; right: -100%; background-color: var(--background); height: 100vh; width: 80%; font-size: 30px; text-align: right; padding: 70px 50px; transition: .5s; }
   header .gnb .sub_menu ul.menu { float: none; }
   header .gnb .sub_menu ul.menu li { float: none; margin: 0 0 30px 0; }
   header .gnb .sub_menu ul.menu li:last-child { margin-right: 0px; }
