--- a/dev/css_dev/layout/_nav.scss
+++ b/dev/css_dev/layout/_nav.scss
@@ -142,7 +142,7 @@ header {
       .sub_menu {
         position: absolute;
         right: -100%;
-        background-color: #fff;
+        background-color: var(--background);
         height: 100vh;
         width: 80%;
         font-size: 30px;
