sass합치기 완료 / js파일 수정

--- a/dev/css_dev/display.scss
+++ b/dev/css_dev/display.scss
@@ -20,11 +20,14 @@
 	'layout/footer.scss';
 
 @import
+  'pages/main.scss';
+
+@import
 	'display/button.scss',
 	'display/form.scss',
 	'display/table.scss',
 	'display/list.scss',
-	'display/tab.scss',
+	'display/section.scss',
 	'display/promotion.scss';
 
 
