--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -249,7 +249,22 @@ ul.socials_list {
     }
   }
 }
+.blind {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  margin: -1px;
+}
 
+.db {
+  display: block;
+}
+
+.dn {
+  display: none;
+}
 
 /* layout_your_inbox */
 .inbox_wrap{
@@ -299,22 +314,6 @@ ul.socials_list {
       right: 10%;
       top: 50%;
     }
-  }
-}
-
-/* promotion only css */
-.promo_only{
-  color: #fff;
-  margin: 30px 0;
-  padding: 20px;
-  & > p{
-    margin-top: 20px;
-  }
-}
-
-.page_promotion {
-  .socials {
-    margin-top: 0 !important;
   }
 }
 
