--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -107,6 +107,75 @@
 
 //
 .page_home{
+  .top_img_wrap{
+    position: relative;
+    &::after{
+      content: '';
+      display: block;
+      clear: both;
+    }
+    .bnt_video{
+      position: absolute;
+      left: 60%;
+      bottom: 40px;
+      width: 318px;
+      height: 112px;
+      padding-left: 68px;
+      border: 0;
+      background-image: url(../../assets/images/ico/ico_youtube.png);
+      background-repeat: no-repeat;
+      background-position: 10% center;
+    }
+  }
+  .typ_01_img{
+    width: 632px;
+    height: 450px;
+    background-color: $prime_color;
+    &::before{
+      content: '';
+      display: block;
+      height: 100%;
+      width: 100%;
+      background: url(../../assets/images/temp/bg_lines_3.png) no-repeat left 34px top 125px;
+    }
+    &::after{
+      content: '';
+      display: block;
+      background: url(../../assets/images/temp/bg_lines_2.png) no-repeat right center;
+      height: 72px;
+      width: 108px;
+      position: absolute;
+      right: 90px;
+      bottom: 138px;
+      z-index: 1;
+    }
+    .img_only{
+      position: relative;
+      left: 0;
+      top: -78%;
+      transform: translateY(-50%);
+      overflow: hidden;
+      width: 100%;
+      max-width: 384px;
+      height: 100%;
+      max-height: 384px;
+      border-radius: 384px;
+      & > div{
+        width: 100%;
+        //height: 0;
+        padding-bottom: 100%;
+        img{
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          margin: auto;
+        }
+      }
+    }
+  }
   .swiper {
     height: 100%;
     margin: 128px 80px 0;
@@ -233,6 +302,26 @@
     }
   }
   .page_home{
+    .top_img_wrap{
+      .bnt_video{
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        max-height: 70px;
+      }
+    }
+    .typ_01_img{
+      &::before,
+        &::after{
+          display: none;
+        }
+        .img_only{
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          margin: 30px 0px 0;
+        }
+    }
     .custom_swiper {
       margin: 30px 0px 0;
       padding: 0 16px;
