--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -83,6 +83,9 @@
             display: block;
           }
         }
+        &.dark_hide{
+          display: none;
+        }
       }
     }
   }
